	all : implemented constraints check on enum and enum field type parameters
	all : fixed memory leak in compilation server and optimized caching in general
	all : added UInt for all targets
	all : added haxe.xml.Printer
	all : added haxe.Int32 as abstract type
	all : improved inline constructors by detecting more cases where it can be applied
	js : window and console are reserved words. Access them with __js__ instead of untyped.
	js : added -D js-flatten
	js : improved inlining
	js : always use JSON extern (compile with -D old-browser to disable)
	cpp : improved side-effect detection
	cs : added -net-lib
	macro : add Context.onAfterGenerate
	macro : allowed $v{(c:Float|Int|String)}
	macro : resolve error line number in external files
	macro : rewrote macros used as static extension
	macro : exposed typed AST
	flash : fixed font embedding with UTF8 chars
	flash : give error if non-nullable basic types are skipped in a call

2013-09-25: 3.0.1
	all : minor DCE bug fix

2013-05-25: 3.0.0
	all : added haxe.ds.BalancedTree
	all : added haxe.ds.EnumValueMap
	all : allow enum constructors as keys to Map
	all : haxe.ds.ObjectMap is now correctly constrained on all targets
	all : preliminary support of -D display-mode=usage|position|metadata
	all : improved pattern matcher error messages
	all : allow inline constructors
	all : allow abstract member macros (not for @:op, @:arrayAccess, @:from, @:to)
	all : allow abstract type parameter variance
	all : do not generate hidden null on if without else
	macro : made abstract structure available

2013-05-08: 3.0.0-RC2
	all : improved abstract support
	all : renamed HAXE_LIBRARY_PATH to HAXE_STD_PATH
	all : added inlinable constructors
	all : renamed haxe.ds.FastCell to GenericCell
	all : fixed >= operator in #if conditionals
	all : improved completion support for Unknown results
	all : allowed [] access for Map
	all : added haxe.ds.WeakMap (not yet supported on all platforms)
	all : all trace parameters are now printed by default